@@ -19,6 +19,7 @@ Unreleased Version 2.3.0-pre
  * Feature: Allow toggling color sampling ring in the color picker tool settings.
  * Fix: Only add actually picked colors to the color picker history, not every color hovered over along the way.
  * Fix: Make opening settings dialog not exit fullscreen on Android.
+ * Fix: On Android devices with a screen large enough to show a full desktop UI, dialogs no longer get full-screened by default. The start and settings dialogs also no longer use their vertical design meant for tiny screens. Thanks tiar for reporting.
 
 2025-10-18 Version 2.3.0-beta.4
  * Fix: Unpremultiply alpha values when exporting to animated WEBP so that partially transparent pixels come out looking correct.
